Fixed Barracks Added op Vial

--- a/CasualAttacker.html
+++ b/CasualAttacker.html
@@ -197,8 +197,8 @@ window.addEventListener("load", function(){
 <a href="TrainStation.html?op=Vision">
   <img onmouseover="document.getElementById('id05').style.display='block'" onmouseout="document.getElementById('id05').style.display='none'" srcset="OperatorImages/Vision.png" style="position: absolute; top: 52%;  left: 50%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="Vision.png">
 </a>
-<a href="TrainStation.html?op=Recruit">
-  <img srcset="OperatorImages/OperatorNotDone.png" style="position: absolute; top: 66%;  left: 50%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" width="75" height="75" vsrc="OperatorNotDone.png">
+<a href="TrainStation.html?op=Vial">
+  <img onmouseover="document.getElementById('id08').style.display='block'" onmouseout="document.getElementById('id08').style.display='none'" srcset="OperatorImages/Vial.png" style="position: absolute; top: 66%;  left: 50%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" width="75" height="75" vsrc="Vial.png">
 </a>
 
 <a href="TrainStation.html?op=Javelin">
@@ -339,6 +339,25 @@ window.addEventListener("load", function(){
       <p style=" position: absolute; font-size: 35px; text-align: center; top: -7%; left: 31%;">Ricochet</p>
     <p style=" position: absolute; font-size: 11px; text-align: left; top: 15%; left: 31%;">Has a clip of bullets that bounce off walls when shot.</p>
     <img style=" position: absolute; top: 10; left: 10; width: 90px; height: 90px;" srcset="OperatorImages/Ricochet.png"></img>
+    </div>
+    <div class="square"></div>
+    <img id="PrimaryWeaponRicochet" style=" position: absolute; top: 60%; left: 8%; width: 210px; height: 67px;" src="GameTextures/WeaponSlotPrimary.png"></img>
+    <p style=" position: absolute; top: 30%; left: 39%; font-size: 20px; color: #000000; text-align: center; font-weight: bold; ">WEAPONS</p>
+    <p style=" position: absolute; top: 44%; left: 10%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">PRIMARY: M4</p>
+    <p style=" position: absolute; top: 44%; left: 64%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">SIDE: </p>
+    <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 58%; left: 7%; height: 78px; width: 215px; background-color: rgba(0,0,0,0.0);"></div>
+    <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 58%; left: 62%; height: 78px; width: 117px; background-color: rgba(0,0,0,0.0);"></div>
+    <div class="container" style="background-color:#f1f1f1">
+    </div>
+  </form>
+</div>
+
+<div id="id08" class="modal">
+  <form class="modal-content animate" action="/CasualAttacker.html">
+    <div class="container">
+      <p style=" position: absolute; font-size: 35px; text-align: center; top: -7%; left: 31%;">Vial</p>
+    <p style=" position: absolute; font-size: 11px; text-align: left; top: 15%; left: 31%;">Has a throwable vial of posion that slows down the enemy and damages them for 5 seconds.</p>
+    <img style=" position: absolute; top: 10; left: 10; width: 90px; height: 90px;" srcset="OperatorImages/Vial.png"></img>
     </div>
     <div class="square"></div>
     <img id="PrimaryWeaponRicochet" style=" position: absolute; top: 60%; left: 8%; width: 210px; height: 67px;" src="GameTextures/WeaponSlotPrimary.png"></img>
