Added All operators

--- a/CasualDefender.html
+++ b/CasualDefender.html
@@ -196,15 +196,15 @@ window.addEventListener("load", function(){
 <a href="TrainStation.html?op=Outlook">
   <img onmouseover="document.getElementById('id05').style.display='block'" onmouseout="document.getElementById('id05').style.display='none'" srcset="OperatorImages/Outlook.png" style="position: absolute; top: 52%;  left: 50%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" width="75" height="75" vsrc="Outlook.png">
 </a>
-<a href="TrainStation.html?op=Recruit">
-  <img srcset="OperatorImages/OperatorNotDone.png" style="position: absolute; top: 52%;  left: 43%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" width="75" height="75" vsrc="OperatorNotDone.png">
+<a href="TrainStation.html?op=Wasp">
+  <img onmouseover="document.getElementById('id08').style.display='block'" onmouseout="document.getElementById('id08').style.display='none'" srcset="OperatorImages/Wasp.png" style="position: absolute; top: 52%;  left: 43%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" width="75" height="75" vsrc="Wasp.png">
 </a>
 
 <a href="TrainStation.html?op=Cloud9Benis">
   <img onmouseover="document.getElementById('id04').style.display='block'" onmouseout="document.getElementById('id04').style.display='none'" srcset="OperatorImages/Cloud9Benis.png" style="position: absolute; top: 66%;  left: 50%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="Cloud9Benis.png">
 </a>
-<a href="TrainStation.html?op=Recruit">
-  <img srcset="OperatorImages/OperatorNotDone.png" style="position: absolute; top: 38%;  left: 57%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="OperatorNotDone.png">
+<a href="TrainStation.html?op=Ace">
+  <img onmouseover="document.getElementById('id09').style.display='block'" onmouseout="document.getElementById('id09').style.display='none'" srcset="OperatorImages/Ace.png" style="position: absolute; top: 38%;  left: 57%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="Ace.png">
 </a>
 <a href="TrainStation.html?op=Inferno">
   <img onmouseover="document.getElementById('id07').style.display='block'" onmouseout="document.getElementById('id07').style.display='none'" srcset="OperatorImages/Inferno.png" style="position: absolute; top: 66%;  left: 43%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="Inferno.png">
@@ -330,6 +330,42 @@ window.addEventListener("load", function(){
       <p style=" position: absolute; font-size: 35px; text-align: center; top: -7%; left: 31%;">Inferno</p>
       <p style=" position: absolute; font-size: 11px; text-align: left; top: 15%; left: 31%;">Creates fake decoy sounds and other noises to throw off the enemy.</p>
       <img style=" position: absolute; top: 10; left: 10; width: 90px; height: 90px;" srcset="OperatorImages/Inferno.png"></img>
+    </div>
+    <div class="square"></div>
+    <p style=" position: absolute; top: 30%; left: 39%; font-size: 20px; color: #000000; text-align: center; font-weight: bold; ">WEAPONS</p>
+    <p style=" position: absolute; top: 44%; left: 10%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">PRIMARY: </p>
+    <p style=" position: absolute; top: 44%; left: 64%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">SIDE: </p>
+    <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 58%; left: 7%; height: 78px; width: 215px; background-color: rgba(0,0,0,0.0);"></div>
+    <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 58%; left: 62%; height: 78px; width: 117px; background-color: rgba(0,0,0,0.0);"></div>
+    <div class="container" style="background-color:#f1f1f1">
+    </div>
+  </form>
+</div>
+
+<div id="id08" class="modal">
+  <form class="modal-content animate" action="/CasualAttacker.html">
+    <div class="container">
+      <p style=" position: absolute; font-size: 35px; text-align: center; top: -7%; left: 31%;">Wasp</p>
+      <p style=" position: absolute; font-size: 11px; text-align: left; top: 15%; left: 31%;">Has a drone that follows and attacks people till destroyed.</p>
+      <img style=" position: absolute; top: 10; left: 10; width: 90px; height: 90px;" srcset="OperatorImages/Wasp.png"></img>
+    </div>
+    <div class="square"></div>
+    <p style=" position: absolute; top: 30%; left: 39%; font-size: 20px; color: #000000; text-align: center; font-weight: bold; ">WEAPONS</p>
+    <p style=" position: absolute; top: 44%; left: 10%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">PRIMARY: </p>
+    <p style=" position: absolute; top: 44%; left: 64%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">SIDE: </p>
+    <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 58%; left: 7%; height: 78px; width: 215px; background-color: rgba(0,0,0,0.0);"></div>
+    <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 58%; left: 62%; height: 78px; width: 117px; background-color: rgba(0,0,0,0.0);"></div>
+    <div class="container" style="background-color:#f1f1f1">
+    </div>
+  </form>
+</div>
+
+<div id="id09" class="modal">
+  <form class="modal-content animate" action="/CasualAttacker.html">
+    <div class="container">
+      <p style=" position: absolute; font-size: 35px; text-align: center; top: -7%; left: 31%;">Ace</p>
+      <p style=" position: absolute; font-size: 11px; text-align: left; top: 15%; left: 31%;">?????????????????????????????????</p>
+      <img style=" position: absolute; top: 10; left: 10; width: 90px; height: 90px;" srcset="OperatorImages/Ace.png"></img>
     </div>
     <div class="square"></div>
     <p style=" position: absolute; top: 30%; left: 39%; font-size: 20px; color: #000000; text-align: center; font-weight: bold; ">WEAPONS</p>
