--- a/static/TrainStation.html
+++ b/static/TrainStation.html
@@ -89,7 +89,7 @@ div#load_screen > div#loading{
             transform-origin: 30% 50%;
         }
 
-      #Blackout, #Tortue, #PewDiePie {
+      .player {
         position: absolute;
         pointer-events: none;
         user-select:none;
@@ -377,7 +377,7 @@ div#load_screen > div#loading{
         <img id="AmmoCounter" src="GameTextures/AmmoCounterLong.png">
         <p id="AmmoAmmount">30/120</p>
         <img id="minimap" src="GameTextures/Train Station33.png" alt="Minimap">
-        <img id="PewDiePie" src="GameTextures/Op4Primary.png">
+        <img class="player" id="PewDiePie" src="GameTextures/Op4Primary.png" style="opacity:0.0;">
         <progress id="Healthbar" value="100" max="100"></progress>
     </div>
   </body>
