added new guns and Bullet Point skin

--- a/CasualDefender.html
+++ b/CasualDefender.html
@@ -328,7 +328,7 @@ window.addEventListener("load", function(){
   <form class="modal-content animate" action="/CasualAttacker.html">
     <div class="container">
       <p style=" position: absolute; font-size: 35px; text-align: center; top: -7%; left: 31%;">Inferno</p>
-      <p style=" position: absolute; font-size: 11px; text-align: left; top: 15%; left: 31%;">Creates fake decoy sounds and other noises to throw off the enemy.</p>
+      <p style=" position: absolute; font-size: 11px; text-align: left; top: 15%; left: 31%;">Has a flame thrower.</p>
       <img style=" position: absolute; top: 10; left: 10; width: 90px; height: 90px;" srcset="OperatorImages/Inferno.png"></img>
     </div>
     <div class="square"></div>
