--- a/Barracks.html
+++ b/Barracks.html
@@ -586,8 +586,8 @@
     <p style=" position: absolute; top: 30%; left: 6%; font-size: 15px; color: #ffffff; text-align: left; font-weight: bold; ">PRIMARY:</p>
     <p style=" position: absolute; top: 45.5%; left: 6%; font-size: 15px; color: #ffffff; text-align: left; font-weight: bold; ">ATTACHMENTS</p>
     <p style=" position: absolute; top: 57%; left: 6%; font-size: 15px; color: #ffffff; text-align: left; font-weight: bold; ">SIDE: </p>
-    <div onclick="document.getElementById('id0WBlac').style.display='block'" style="position: absolute; border-style: solid; z-index: 3; opacity: 0.0; top: 35%; left: 5.5%; height: 78px; width: 215px;"></div>
-    <img id="PrimaryWeaponSlotBlackout" style="position: absolute; z-index: 2; top: 36%; left: 6%; width: 210px; height: 67px; "src="GameTextures/WeaponSlotPrimary.png"></img>
+    <div onclick="document.getElementById('id0WVial').style.display='block'" style="position: absolute; border-style: solid; z-index: 3; opacity: 0.0; top: 35%; left: 5.5%; height: 78px; width: 215px;"></div>
+    <img id="PrimaryWeaponSlotVial" style="position: absolute; z-index: 2; top: 36%; left: 6%; width: 210px; height: 67px; "src="GameTextures/WeaponSlotPrimary.png"></img>
     <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 35%; left: 5.5%; height: 78px; width: 215px; background-color: rgba(255,255,255,0.4);"></div>
     <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 51%; left: 4%; height: 35px; width: 40px; background-color: rgba(255,255,255,0.4);"></div>
     <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 51%; left: 8%; height: 35px; width: 40px; background-color: rgba(255,255,255,0.4);"></div>
@@ -851,7 +851,7 @@
     <p style=" position: absolute; top: 30%; left: 6%; font-size: 15px; color: #ffffff; text-align: left; font-weight: bold; ">PRIMARY:</p>
     <p style=" position: absolute; top: 45.5%; left: 6%; font-size: 15px; color: #ffffff; text-align: left; font-weight: bold; ">ATTACHMENTS</p>
     <p style=" position: absolute; top: 57%; left: 6%; font-size: 15px; color: #ffffff; text-align: left; font-weight: bold; ">SIDE: </p>
-    <div onclick="document.getElementById('id0WInfe').style.display='block'" style="position: absolute; border-style: solid; z-index: 3; opacity: 0.0; top: 35%; left: 5.5%; height: 78px; width: 215px;"></div>
+    <div onclick="document.getElementById('id0WWasp').style.display='block'" style="position: absolute; border-style: solid; z-index: 3; opacity: 0.0; top: 35%; left: 5.5%; height: 78px; width: 215px;"></div>
     <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 35%; left: 5.5%; height: 78px; width: 215px; background-color: rgba(255,255,255,0.4);"></div>
     <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 51%; left: 4%; height: 35px; width: 40px; background-color: rgba(255,255,255,0.4);"></div>
     <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 51%; left: 8%; height: 35px; width: 40px; background-color: rgba(255,255,255,0.4);"></div>
@@ -880,7 +880,7 @@
     <p style=" position: absolute; top: 30%; left: 6%; font-size: 15px; color: #ffffff; text-align: left; font-weight: bold; ">PRIMARY:</p>
     <p style=" position: absolute; top: 45.5%; left: 6%; font-size: 15px; color: #ffffff; text-align: left; font-weight: bold; ">ATTACHMENTS</p>
     <p style=" position: absolute; top: 57%; left: 6%; font-size: 15px; color: #ffffff; text-align: left; font-weight: bold; ">SIDE: </p>
-    <div onclick="document.getElementById('id0WInfe').style.display='block'" style="position: absolute; border-style: solid; z-index: 3; opacity: 0.0; top: 35%; left: 5.5%; height: 78px; width: 215px;"></div>
+    <div onclick="document.getElementById('id0WAce').style.display='block'" style="position: absolute; border-style: solid; z-index: 3; opacity: 0.0; top: 35%; left: 5.5%; height: 78px; width: 215px;"></div>
     <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 35%; left: 5.5%; height: 78px; width: 215px; background-color: rgba(255,255,255,0.4);"></div>
     <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 51%; left: 4%; height: 35px; width: 40px; background-color: rgba(255,255,255,0.4);"></div>
     <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 51%; left: 8%; height: 35px; width: 40px; background-color: rgba(255,255,255,0.4);"></div>
@@ -1032,6 +1032,36 @@
  </div>
 </div>
 
+<div id="id0WBull" class="modal">
+    <div class="container">
+    <div style="Position: absolute; left: 25%; " class="WeaponSquare">
+        <div onclick="document.getElementById('PrimaryWeaponSlotBulletPoint').src='GameTextures/GunAK47BulletPiont.png' , BulletPointPrimaryGun('GunAK47BulletPiont') , document.getElementById('id0WBull').style.display='none'" style="position: absolute; border-style: solid; z-index: 2; border-color: #000000; opacity: 0.5; top: 20%; left: 9.5%; height: 78px; width: 215px; background-color: rgba(255,255,255,0.0);"></div>
+        <div onclick="document.getElementById('PrimaryWeaponSlotBulletPoint').src='GameTextures/SR-2Veresk.png' , BulletPointPrimaryGun('SR-2Veresk') , document.getElementById('id0WBull').style.display='none'" style="position: absolute; border-style: solid; z-index: 2; border-color: #000000; opacity: 0.5; top: 50%; left: 9.5%; height: 78px; width: 215px; background-color: rgba(255,255,255,0.0);"></div>
+          <p style="position: absolute; top: 10%; left: 40%; font-size: 15;">Ak-47</p>
+          <p style="position: absolute; top: 40%; left: 40%; font-size: 15;">SR-2 Veresk</p>
+        <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 20%; left: 9.5%; height: 78px; width: 215px; background-color: rgba(255,255,255,0.4);"></div>
+          <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 50%; left: 9.5%; height: 78px; width: 215px; background-color: rgba(255,255,255,0.4);"></div>
+      <img style=" position: absolute; top: 22%; left: 11%; width: 210px; height: 67px;" src="GameTextures/GunAK47BulletPiont.png"></img>
+      <img style=" position: absolute; top: 52%; left: 11%; width: 210px; height: 67px;" srcset="GameTextures/SR-2Veresk.png"></img>
+ </div>
+ </div>
+</div>
+
+<div id="id0WVial" class="modal">
+    <div class="container">
+    <div style="Position: absolute; left: 25%; " class="WeaponSquare">
+        <div onclick="document.getElementById('PrimaryWeaponSlotVial').src='GameTextures/FX-05Xiuhcoatl.png' , VialPrimaryGun('FX-05Xiuhcoatl') , document.getElementById('id0WVial').style.display='none'" style="position: absolute; border-style: solid; z-index: 2; border-color: #000000; opacity: 0.5; top: 20%; left: 9.5%; height: 78px; width: 215px; background-color: rgba(255,255,255,0.0);"></div>
+        <div onclick="document.getElementById('PrimaryWeaponSlotVial').src='GameTextures/HK33.png' , VialPrimaryGun('HK33') , document.getElementById('id0WVial').style.display='none'" style="position: absolute; border-style: solid; z-index: 2; border-color: #000000; opacity: 0.5; top: 50%; left: 9.5%; height: 78px; width: 215px; background-color: rgba(255,255,255,0.0);"></div>
+          <p style="position: absolute; top: 10%; left: 40%; font-size: 15;">FX-05 Xiuhcoatl</p>
+          <p style="position: absolute; top: 40%; left: 40%; font-size: 15;">HK33</p>
+        <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 20%; left: 9.5%; height: 78px; width: 215px; background-color: rgba(255,255,255,0.4);"></div>
+          <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 50%; left: 9.5%; height: 78px; width: 215px; background-color: rgba(255,255,255,0.4);"></div>
+      <img style=" position: absolute; top: 22%; left: 11%; width: 210px; height: 67px;" src="GameTextures/FX-05Xiuhcoatl.png"></img>
+      <img style=" position: absolute; top: 52%; left: 11%; width: 210px; height: 67px;" srcset="GameTextures/HK33.png"></img>
+ </div>
+ </div>
+</div>
+
 
 
 
@@ -1063,13 +1093,15 @@
   var modal27 = document.getElementById('id27');
   var modal28 = document.getElementById('id28');
   var modal29 = document.getElementById('id29');
-  var modalGalzeBio = document.getElementById('idGlazeBio');
+  var modalGlazeBio = document.getElementById('idGlazeBio');
   var WTour = document.getElementById('id0WTour');
   var WOutl = document.getElementById('id0WOutl');
   var WPewd = document.getElementById('id0WPewd');
   var WBlac = document.getElementById('id0WBlac');
   var WJave = document.getElementById('id0WJave');
   var WVisi = document.getElementById('id0WVisi');
+  var WBull = document.getElementById('id0WBull');
+  var WVial = document.getElementById('id0WVial');
   var WOutlast = document.getElementById('id0WOutlast');
 
   window.onclick = function(event) {
@@ -1148,6 +1180,12 @@ document.getElementById('id0WJave').style.display='none'
 if (event.target == WVisi) {
 document.getElementById('id0WVisi').style.display='none'
 }
+if (event.target == WBull) {
+document.getElementById('id0WBull').style.display='none'
+}
+if (event.target == WVial) {
+document.getElementById('id0WVial').style.display='none'
+}
 if (event.target == WOutlast) {
 document.getElementById('id0WOutlast').style.display='none'
 }
@@ -1163,8 +1201,6 @@ document.getElementById('id0WOutlast').style.display='none'
     });
   </script>
 
-<p style="position: absolute; top: 5%; left: 55%; font-size: 40; color:#ffffff;">Attackers</p>
-<p style="position: absolute; top: 5%; left: 30%; font-size: 40; color:#ffffff;">Defenders</p>
 <a onclick="window.location.href = '/?t=' + music.currentTime;">
 <button style="position: absolute; top: 80%; left: 40%; color:#ffffff;">Return</button>
 </a>
