--- a/static/Barracks.html
+++ b/static/Barracks.html
@@ -916,7 +916,7 @@
       <div class="container">
         <div class="squareblack"></div>
     </div>
-<text class="a"></text>
+<text class="a">Height__________________5.9ft<br>Weight__________________58.8kg</text>
     <button onclick="document.getElementById('idAboutGlaze').style.display='none'" style="position: absolute; top: 77%; left: 18.5%; width: 7%; height: 6%; ">ABOUT</button>
       <div class="container" style="background-color:#000000">
       </div>
