--- a/static/CasualDefender.html
+++ b/static/CasualDefender.html
@@ -364,7 +364,7 @@ window.addEventListener("load", function(){
   <form class="modal-content animate" action="/CasualAttacker.html">
     <div class="container">
       <p style=" position: absolute; font-size: 35px; text-align: center; top: -7%; left: 31%;">Ace</p>
-      <p style=" position: absolute; font-size: 11px; text-align: left; top: 15%; left: 31%;">?????????????????????????????????</p>
+      <p style=" position: absolute; font-size: 11px; text-align: left; top: 15%; left: 31%;">Is lucky and has chances of reloading faster, shooting striaghter, running faster, and other.</p>
       <img style=" position: absolute; top: 10; left: 10; width: 90px; height: 90px;" srcset="OperatorImages/Ace.png"></img>
     </div>
     <div class="square"></div>
