Added and changed a lot

--- a/static/CasualAttacker.html
+++ b/static/CasualAttacker.html
@@ -204,7 +204,7 @@ window.addEventListener("load", function(){
 <a href="TrainStation.html?op=Javelin">
   <img onmouseover="document.getElementById('id06').style.display='block'" onmouseout="document.getElementById('id06').style.display='none'" srcset="OperatorImages/Javelin.png" style="position: absolute; top: 52%;  left: 43%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="Javelin.png">
 </a>
-<a href="TrainStation.html?op=Recruit">
+<a href="TrainStation.html?op=WolfGang">
   <img onmouseover="document.getElementById('id09').style.display='block'" onmouseout="document.getElementById('id09').style.display='none'" srcset="OperatorImages/WolfGang.png" style="position: absolute; top: 66%;  left: 57%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="WolfGang.png">
 </a>
 <a href="TrainStation.html?op=Ricochet">
@@ -408,7 +408,7 @@ var image = localStorage.getItem("BulletPointPrimary")==null ? 'WeaponSlotPrimar
 document.getElementById('PrimaryWeaponBulletPoint').src="GameTextures/"+ image +".png";
 var image = localStorage.getItem("JavelinPrimary")==null ? 'WeaponSlotPrimary' : localStorage.getItem("JavelinPrimary");
 document.getElementById('PrimaryWeaponJavelin').src="GameTextures/"+ image +".png";
-var image = localStorage.getItem("WolfGangPrimary")==null ? 'WeaponSlotPrimary' : localStorage.getItem("JavelinPrimary");
+var image = localStorage.getItem("WolfGangPrimary")==null ? 'WeaponSlotPrimary' : localStorage.getItem("WolfGangPrimary");
 document.getElementById('PrimaryWeaponWolfGang').src="GameTextures/"+ image +".png";
 
   </script>
