--- a/static/Barracks.html
+++ b/static/Barracks.html
@@ -346,7 +346,7 @@
 <!--
   <img onclick="document.getElementById('id01').style.display='block'" srcset="OperatorImages/Tortue.png" style="position: absolute; top: 28%;  left: 60%; margin-top: -40px; margin-left: -40px; width: 80px; height: 80px;" vsrc="Tortue.png"></img>
   <img onclick="document.getElementById('id02').style.display='block'" srcset="OperatorImages/Pewdiepie.png" style="position: absolute; top: 28%;  left: 67%; margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="Pewdiepie.png"></img>
-  <img onclick="document.getElementById('id03').style.display='block'" srcset="OperatorImages/BulletPoint.png" style="position: absolute; top: 42%;  left: 67%; margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="Bullet Point.png"></img>
+  <img onclick="document.getElementById('id03').style.display='block'" srcset="OperatorImages/.png" style="position: absolute; top: 42%;  left: 67%; margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="Bullet Point.png"></img>
   <img onclick="document.getElementById('id04').style.display='block'" srcset="OperatorImages/Vision.png" style="position: absolute; top: 42%;  left: 60%; margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" width="75" height="75" vsrc="Vision.png"></img>
   <img srcset="OperatorImages/OperatorNotDone.png" style="position: absolute; top: 56%;  left: 60%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" width="75" height="75" vsrc="OperatorNotDone.png"></img>
   <img onclick="document.getElementById('id05').style.display='block'" srcset="OperatorImages/Javelin.png" style="position: absolute; top: 42%;  left: 53%; margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="Javelin.png"></img>
@@ -985,13 +985,13 @@
 <div id="id0WBlac" class="modal">
     <div class="container">
     <div style="Position: absolute; left: 25%; " class="WeaponSquare">
-        <div onclick="document.getElementById('PrimaryWeaponSlotBlackout').src='GameTextures/BlackoutsF88Austeyr.png' , BlackoutPrimaryGun('BlackoutsF88Austeyr') , document.getElementById('id0WBlac').style.display='none'" style="position: absolute; border-style: solid; z-index: 2; border-color: #000000; opacity: 0.5; top: 20%; left: 9.5%; height: 78px; width: 215px; background-color: rgba(255,255,255,0.0);"></div>
+        <div onclick="document.getElementById('PrimaryWeaponSlotBlackout').src='GameTextures/F88Austeyr.png' , BlackoutPrimaryGun('F88Austeyr') , document.getElementById('id0WBlac').style.display='none'" style="position: absolute; border-style: solid; z-index: 2; border-color: #000000; opacity: 0.5; top: 20%; left: 9.5%; height: 78px; width: 215px; background-color: rgba(255,255,255,0.0);"></div>
         <div onclick="document.getElementById('PrimaryWeaponSlotBlackout').src='GameTextures/LMTMARS-L.png' , BlackoutPrimaryGun('LMTMARS-L') , document.getElementById('id0WBlac').style.display='none'" style="position: absolute; border-style: solid; z-index: 2; border-color: #000000; opacity: 0.5; top: 50%; left: 9.5%; height: 78px; width: 215px; background-color: rgba(255,255,255,0.0);"></div>
           <p style="position: absolute; top: 10%; left: 40%; font-size: 15;">F88 Austeyr</p>
           <p style="position: absolute; top: 40%; left: 40%; font-size: 15;">Franchi SPAS-15</p>
         <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 20%; left: 9.5%; height: 78px; width: 215px; background-color: rgba(255,255,255,0.4);"></div>
           <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 50%; left: 9.5%; height: 78px; width: 215px; background-color: rgba(255,255,255,0.4);"></div>
-      <img style=" position: absolute; top: 22%; left: 11%; width: 210px; height: 67px;" src="GameTextures/BlackoutsF88Austeyr.png"></img>
+      <img style=" position: absolute; top: 22%; left: 11%; width: 210px; height: 67px;" src="GameTextures/F88Austeyr.png"></img>
       <img style=" position: absolute; top: 52%; left: 11%; width: 210px; height: 67px;" srcset="GameTextures/LMTMARS-L.png"></img>
  </div>
  </div>
@@ -1045,13 +1045,13 @@
 <div id="id0WBull" class="modal">
     <div class="container">
     <div style="Position: absolute; left: 25%; " class="WeaponSquare">
-        <div onclick="document.getElementById('PrimaryWeaponSlotBulletPoint').src='GameTextures/GunAK47BulletPiont.png' , BulletPointPrimaryGun('GunAK47BulletPiont') , document.getElementById('id0WBull').style.display='none'" style="position: absolute; border-style: solid; z-index: 2; border-color: #000000; opacity: 0.5; top: 20%; left: 9.5%; height: 78px; width: 215px; background-color: rgba(255,255,255,0.0);"></div>
+        <div onclick="document.getElementById('PrimaryWeaponSlotBulletPoint').src='GameTextures/Ak-47.png' , BulletPointPrimaryGun('Ak-47') , document.getElementById('id0WBull').style.display='none'" style="position: absolute; border-style: solid; z-index: 2; border-color: #000000; opacity: 0.5; top: 20%; left: 9.5%; height: 78px; width: 215px; background-color: rgba(255,255,255,0.0);"></div>
         <div onclick="document.getElementById('PrimaryWeaponSlotBulletPoint').src='GameTextures/SR-2Veresk.png' , BulletPointPrimaryGun('SR-2Veresk') , document.getElementById('id0WBull').style.display='none'" style="position: absolute; border-style: solid; z-index: 2; border-color: #000000; opacity: 0.5; top: 50%; left: 9.5%; height: 78px; width: 215px; background-color: rgba(255,255,255,0.0);"></div>
           <p style="position: absolute; top: 10%; left: 40%; font-size: 15;">Ak-47</p>
           <p style="position: absolute; top: 40%; left: 40%; font-size: 15;">SR-2 Veresk</p>
         <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 20%; left: 9.5%; height: 78px; width: 215px; background-color: rgba(255,255,255,0.4);"></div>
           <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 50%; left: 9.5%; height: 78px; width: 215px; background-color: rgba(255,255,255,0.4);"></div>
-      <img style=" position: absolute; top: 22%; left: 11%; width: 210px; height: 67px;" src="GameTextures/GunAK47BulletPiont.png"></img>
+      <img style=" position: absolute; top: 22%; left: 11%; width: 210px; height: 67px;" src="GameTextures/Ak-47.png"></img>
       <img style=" position: absolute; top: 52%; left: 11%; width: 210px; height: 67px;" srcset="GameTextures/SR-2Veresk.png"></img>
  </div>
  </div>
