--- a/static/Barracks.html
+++ b/static/Barracks.html
@@ -1015,13 +1015,13 @@
 <div id="id0WVisi" class="modal">
     <div class="container">
     <div style="Position: absolute; left: 25%; " class="WeaponSquare">
-        <div onclick="document.getElementById('PrimaryWeaponSlotVision').src='GameTextures/FBBerylVisionGun.png' , VisionPrimaryGun('FBBerylVisionGun') , document.getElementById('id0WVisi').style.display='none'" style="position: absolute; border-style: solid; z-index: 2; border-color: #000000; opacity: 0.5; top: 20%; left: 9.5%; height: 78px; width: 215px; background-color: rgba(255,255,255,0.0);"></div>
+        <div onclick="document.getElementById('PrimaryWeaponSlotVision').src='GameTextures/FBBeryl.png' , VisionPrimaryGun('FBBeryl') , document.getElementById('id0WVisi').style.display='none'" style="position: absolute; border-style: solid; z-index: 2; border-color: #000000; opacity: 0.5; top: 20%; left: 9.5%; height: 78px; width: 215px; background-color: rgba(255,255,255,0.0);"></div>
         <div onclick="document.getElementById('PrimaryWeaponSlotVision').src='GameTextures/PM-84Glauberyt.png' , VisionPrimaryGun('PM-84Glauberyt') , document.getElementById('id0WVisi').style.display='none'" style="position: absolute; border-style: solid; z-index: 2; border-color: #000000; opacity: 0.5; top: 50%; left: 9.5%; height: 78px; width: 215px; background-color: rgba(255,255,255,0.0);"></div>
           <p style="position: absolute; top: 10%; left: 40%; font-size: 15;">FB Beryl</p>
           <p style="position: absolute; top: 40%; left: 40%; font-size: 15;">PM-84 Glauberyt</p>
         <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 20%; left: 9.5%; height: 78px; width: 215px; background-color: rgba(255,255,255,0.4);"></div>
           <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 50%; left: 9.5%; height: 78px; width: 215px; background-color: rgba(255,255,255,0.4);"></div>
-      <img style=" position: absolute; top: 22%; left: 11%; width: 210px; height: 67px;" src="GameTextures/FBBerylVisionGun.png"></img>
+      <img style=" position: absolute; top: 22%; left: 11%; width: 210px; height: 67px;" src="GameTextures/FBBeryl.png"></img>
       <img style=" position: absolute; top: 52%; left: 11%; width: 210px; height: 67px;" srcset="GameTextures/PM-84Glauberyt.png"></img>
  </div>
  </div>
