--- a/static/index.html
+++ b/static/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+      <meta name="google-site-verification" content="1jZRcnODK5J4_KMGANZj3sC1Fg4QDHMcvwTPUJBJhsk" />
     <link rel="apple-touch-icon" sizes="57x57" href="GameIcons/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="GameIcons/apple-icon-60x60.png">
 <link rel="apple-touch-icon" sizes="72x72" href="GameIcons/apple-icon-72x72.png">
