--- a/static/CasualAttacker.html
+++ b/static/CasualAttacker.html
@@ -394,22 +394,24 @@ window.addEventListener("load", function(){
 
 
 
-var image = localStorage.getItem("BlackoutPrimary")==null ? 'WeaponSlotPrimary' : localStorage.getItem("BlackoutPrimary");
-document.getElementById('PrimaryWeaponBlackout').src="GameTextures/"+ image +".png";
-var image = localStorage.getItem("TortuePrimary")==null ? 'WeaponSlotPrimary' : localStorage.getItem("TortuePrimary");
-document.getElementById('PrimaryWeaponTortue').src="GameTextures/"+ image +".png";
-var image = localStorage.getItem("PewdiepiePrimary")==null ? 'WeaponSlotPrimary' : localStorage.getItem("PewdiepiePrimary");
-document.getElementById('PrimaryWeaponPewdiepie').src="GameTextures/"+ image +".png";
-var image = localStorage.getItem("RicochetPrimary")==null ? 'WeaponSlotPrimary' : localStorage.getItem("RicochetPrimary");
-document.getElementById('PrimaryWeaponRicochet').src="GameTextures/"+ image +".png";
-var image = localStorage.getItem("VisionPrimary")==null ? 'WeaponSlotPrimary' : localStorage.getItem("VisionPrimary");
-document.getElementById('PrimaryWeaponVision').src="GameTextures/"+ image +".png";
-var image = localStorage.getItem("BulletPointPrimary")==null ? 'WeaponSlotPrimary' : localStorage.getItem("BulletPointPrimary");
-document.getElementById('PrimaryWeaponBulletPoint').src="GameTextures/"+ image +".png";
-var image = localStorage.getItem("JavelinPrimary")==null ? 'WeaponSlotPrimary' : localStorage.getItem("JavelinPrimary");
-document.getElementById('PrimaryWeaponJavelin').src="GameTextures/"+ image +".png";
-var image = localStorage.getItem("WolfGangPrimary")==null ? 'WeaponSlotPrimary' : localStorage.getItem("WolfGangPrimary");
-document.getElementById('PrimaryWeaponWolfGang').src="GameTextures/"+ image +".png";
+var PrimaryBlackoutImage = localStorage.getItem("BlackoutPrimary")==null ? 'WeaponSlotPrimary' : localStorage.getItem("BlackoutPrimary");
+document.getElementById('PrimaryWeaponBlackout').src="GameTextures/"+ PrimaryBlackoutImage +".png";
+var PrimaryTortueImage = localStorage.getItem("TortuePrimary")==null ? 'WeaponSlotPrimary' : localStorage.getItem("TortuePrimary");
+document.getElementById('PrimaryWeaponTortue').src="GameTextures/"+ PrimaryTortueImage +".png";
+var PrimaryPewdiepieImage = localStorage.getItem("PewdiepiePrimary")==null ? 'WeaponSlotPrimary' : localStorage.getItem("PewdiepiePrimary");
+document.getElementById('PrimaryWeaponPewdiepie').src="GameTextures/"+ PrimaryPewdiepieImage +".png";
+var PrimaryRicochetImage = localStorage.getItem("RicochetPrimary")==null ? 'WeaponSlotPrimary' : localStorage.getItem("RicochetPrimary");
+document.getElementById('PrimaryWeaponRicochet').src="GameTextures/"+ PrimaryRicochetImage +".png";
+var PrimaryVisionImage = localStorage.getItem("VisionPrimary")==null ? 'WeaponSlotPrimary' : localStorage.getItem("VisionPrimary");
+document.getElementById('PrimaryWeaponVision').src="GameTextures/"+ PrimaryVisionImage +".png";
+var PrimaryBulletPointImage = localStorage.getItem("BulletPointPrimary")==null ? 'WeaponSlotPrimary' : localStorage.getItem("BulletPointPrimary");
+document.getElementById('PrimaryWeaponBulletPoint').src="GameTextures/"+ PrimaryBulletPointImage +".png";
+var PrimaryJavelinImage = localStorage.getItem("JavelinPrimary")==null ? 'WeaponSlotPrimary' : localStorage.getItem("JavelinPrimary");
+document.getElementById('PrimaryWeaponJavelin').src="GameTextures/"+ PrimaryJavelinImage +".png";
+var PrimaryWolfGangImage = localStorage.getItem("WolfGangPrimary")==null ? 'WeaponSlotPrimary' : localStorage.getItem("WolfGangPrimary");
+document.getElementById('PrimaryWeaponWolfGang').src="GameTextures/"+ PrimaryWolfGangImage +".png";
+var PrimaryInfernoImage = localStorage.getItem("InfernoPrimary")==null ? 'WeaponSlotPrimary' : localStorage.getItem("InfernoPrimary");
+document.getElementById('PrimaryWeaponInferno').src="GameTextures/"+ PrimaryInfernoImage +".png";
 
   </script>
  </body>
