--- a/static/index.html
+++ b/static/index.html
@@ -224,6 +224,11 @@ modal:hover{
    margin-left: -10%;
    width: 20%;">How To Play</button>
    </a>
+   <a href="https://discord.gg/kDh6eQc" target="_blank">
+   <button style="position: absolute; top: 113%; left: 80%; margin-top: -10%;
+   margin-left: -10%;
+   width: 20%;">Discord</button>
+   </a>
 
 <div id="id01" class="modal">
     <div class="container">
@@ -275,6 +280,5 @@ clickplay.volume = 1.00;
 clickplay.play();
 }
 </script>
-
   </body>
 </html>
