--- a/static/index.html
+++ b/static/index.html
@@ -225,15 +225,15 @@ modal:hover{
    width: 20%;">How To Play</button>
    </a>
    <a href="https://discord.gg/kDh6eQc" target="_blank">
-   <button style="position: absolute; top: 113%; left: 80%; margin-top: -10%;
+   <button style="position: absolute; top: 105%; left: 13%; margin-top: -10%;
    margin-left: -10%;
    width: 20%;">Discord</button>
    </a>
 
-   <a href="https://www.patreon.com/SiegeXY">
-   <button style="position: absolute; top: 110%; left: 13%; margin-top: -10%;
+   <a href="https://www.patreon.com/SiegeXY" target="_blank">
+   <button style="position: absolute; top: 113%; left: 13%; margin-top: -10%;
    margin-left: -10%;
-   width: 10%;">Help Support Us</button>
+   width: 20%;">Help Support Us</button>
    </a>
 
 <div id="id01" class="modal">
