--- a/static/index.html
+++ b/static/index.html
@@ -225,15 +225,13 @@ modal:hover{
    width: 20%;">How To Play</button>
    </a>
    <a href="https://discord.gg/kDh6eQc" target="_blank">
-   <button style="position: absolute; top: 105%; left: 13%; margin-top: -10%;
-   margin-left: -10%;
-   width: 20%;">Discord</button>
+   <img src="MenuTextures/Discord-Logo.png" style="position: absolute; top: 87%; left: 1%;
+   width: 5.5%; height: 11%;"></img>
    </a>
 
    <a href="https://www.patreon.com/SiegeXY" target="_blank">
-   <button style="position: absolute; top: 113%; left: 13%; margin-top: -10%;
-   margin-left: -10%;
-   width: 20%;">Help Support Us</button>
+   <img  src="MenuTextures/Support-Us.png" style="position: absolute; top: 87%; left: 6.5%;
+   width: 5.5%; height: 11%;"></img>
    </a>
 
 <div id="id01" class="modal">
