Updated how to play

--- a/static/HowToPlay.html
+++ b/static/HowToPlay.html
@@ -91,6 +91,19 @@ input[type=text], input[type=password] {
 }
 
 
+.ReloadGreen {
+  position: absolute; width: 35px; height: 35px; background-color: rgba(10,255,90,0.6);
+}
+.MovementBlue {
+  position: absolute; width: 35px; height: 35px; background-color: rgba(10,90,255,0.6);
+}
+.WeapomSwitchSeco {
+  position: absolute; width: 35px; height: 35px; background-color: rgba(255,200,25,0.6);
+}
+.WeapomSwitchPrim {
+  position: absolute; width: 35px; height: 35px; background-color: rgba(255,150,10,0.6);
+}
+
 span.psw {
   float: right;
   padding-top: 16px;
@@ -142,7 +155,7 @@ span.psw {
     </head>
     <body>
 
-<img style=" position: absolute; top: 23%; left: 21%; width: 5%; height: 8%;" src="Keys/W1.png">
+<!-- <img style=" position: absolute; top: 23%; left: 21%; width: 5%; height: 8%;" src="Keys/W1.png">
 <img style=" position: absolute; top: 32%; left: 15.5%; width: 5%; height: 8%;" src="Keys/A1.png">
 <img style=" position: absolute; top: 32%; left: 21%; width: 5%; height: 8%;" src="Keys/S1.png">
 <img style=" position: absolute; top: 32%; left: 26.5%; width: 5%; height: 8%;" src="Keys/D1.png">
@@ -155,7 +168,30 @@ span.psw {
 <img style=" position: absolute; top: 32%; left: 83.5%; width: 5%; height: 8%;" src="Keys/@-and-2.png">
 
 <img style=" position: absolute; top: 52%; left: 21%; width: 7%; height: 16%;" src="Keys/MouseLeft.png">
-<img style=" position: absolute; top: 52%; left: 30.5%; width: 7%; height: 16%;" src="Keys/MouseRight.png">
+<img style=" position: absolute; top: 52%; left: 30.5%; width: 7%; height: 16%;" src="Keys/MouseRight.png"> -->
+
+<img style=" position: absolute; z-index: 5; top: 50%; left: 50%; margin-left: -300px; margin-top:-107.5px; width: 600px; height: 215px;" src="Keys/KeyBoard.png">
+<!-- Key U <div class="MovementBlue" style="top: 41.5%; left: 50%;"></div>
+ Key R <div class="MovementBlue" style="top: 41.5%; left: 41.6%;"></div>
+Key E ><div class="MovementBlue" style="top: 41.5%; left: 38.8%;"></div>-->
+<!-- Key W --><div class="MovementBlue" style="top: 41.5%; left: 36%;"></div>
+<!-- Key S --><div class="MovementBlue" style="top: 46.9%; left: 36.6%;"></div>
+<!-- Key A --><div class="MovementBlue" style="top: 46.9%; left: 33.6%;"></div>
+<!-- Key D --><div class="MovementBlue" style="top: 46.9%; left: 39.3%;"></div>
+<div class="WeapomSwitchPrim" style="left: 31.6%; top: 35.7%;"></div>
+<div class="WeapomSwitchSeco" style="left: 34.6%; top: 35.7%;"></div>
+<div class="ReloadGreen" style="left: 41.6%; top: 41.5%;"></div>
+
+
+
+<div class="MovementBlue" style="left: 30%; top: 10%;"></div>
+<div class="WeapomSwitchPrim" style="left: 36%; top: 10%;"></div>
+<div class="WeapomSwitchSeco" style="left: 40%; top: 10%;"></div>
+<div class="ReloadGreen" style="left: 46%; top: 10%;"></div>
+
+
+<!-- Key Q <div class="MovementBlue" style="top: 41.5%; left: 33%;"></div>-->
+
 
 <a onclick="window.location.href = '/?t=' + music.currentTime">
 <button style="position: absolute; top: 80%; left: 40%; color:#ffffff;">Return</button>
